[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/UI/ChangeScene.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/UI/Themes/BixTheme/BixTheme.tres" type="Theme" id=2]
[ext_resource path="res://Scenes/UI/ButtonSFX.gd" type="Script" id=3]
[ext_resource path="res://Scenes/UI/ChangeConfirm.gd" type="Script" id=4]

[node name="ChangeConfirm" instance=ExtResource( 1 )]
script = ExtResource( 4 )

[node name="CL" type="CanvasLayer" parent="." index="0"]
layer = 100

[node name="M" type="MarginContainer" parent="CL" index="0"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 250, 170 )
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="Panel" parent="CL/M" index="0"]
margin_left = 387.0
margin_top = 215.0
margin_right = 637.0
margin_bottom = 385.0
rect_min_size = Vector2( 250, 170 )
rect_pivot_offset = Vector2( 125, 85 )
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="M" type="MarginContainer" parent="CL/M/Popup" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="V" type="VBoxContainer" parent="CL/M/Popup/M" index="0"]
margin_left = 10.0
margin_top = 10.0
margin_right = 240.0
margin_bottom = 164.0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CL/M/Popup/M/V" index="0"]
margin_right = 230.0
margin_bottom = 75.0
size_flags_vertical = 2
text = "This Will Erase Your Scores!"
align = 1
valign = 1
autowrap = true

[node name="H" type="HBoxContainer" parent="CL/M/Popup/M/V" index="1"]
margin_top = 85.0
margin_right = 230.0
margin_bottom = 154.0
size_flags_vertical = 10

[node name="Cancel" type="Button" parent="CL/M/Popup/M/V/H" index="0"]
margin_right = 115.0
margin_bottom = 69.0
focus_mode = 0
size_flags_horizontal = 2
size_flags_vertical = 4
text = "Cancel"
script = ExtResource( 3 )

[node name="Ok" type="Button" parent="CL/M/Popup/M/V/H" index="1"]
margin_left = 163.0
margin_right = 230.0
margin_bottom = 69.0
focus_mode = 0
size_flags_horizontal = 10
size_flags_vertical = 4
text = "Ok"
script = ExtResource( 3 )

[node name="Tween" type="Tween" parent="." index="1"]

[connection signal="gui_input" from="CL/M" to="." method="_on_M_gui_input"]
[connection signal="pressed" from="CL/M/Popup/M/V/H/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="CL/M/Popup/M/V/H/Ok" to="." method="_on_Ok_pressed"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
